# paritea

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  NOTICE.md  README.md  main.py  pyproject.toml  ruff.toml
.github/workflows/: conventional-commits.yml  juypter.yml  ruff.yml  test.yml
demo/: steane-state-prep-ft-check.ipynb  steane-state-prep.ipynb  stim_dem_experiments.ipynb  web_glue_experiments.ipynb
src/faulttools/: __init__.py  dagger_form.py  diagram.py  drawing.py  export.py  flip_operators.py  noise_model.py  pauli.py  pushout.py  util.py
src/faulttools/destructive/: __init__.py  post_selection.py
src/faulttools/diagram/: __init__.py  diagram.py
src/faulttools/equivalence/: __init__.py  check_fault_equivalence.py  enumeration.py
src/faulttools/glue/: __init__.py  sinter.py
src/faulttools/noise/: __init__.py  conversion.py  model.py
src/generate/: zweb.py
src/paritea/: diagram.py  flip_operators.py  pushout.py
tests/: test_dagger_form.py  test_flip_operators.py  test_mofo.py  test_pauli.py  test_pauli_string.py  test_pushout.py
tests/destructive/: test_post_selection.py
tests/equivalence/: test_fault_equivalence.py
tests/web/: identity_webs.stabilising  rotated_surface_code_shor[3-1].detecting  rotated_surface_code_shor[3-1].stabilising  rotated_surface_code_shor[3].detecting  rotated_surface_code_shor[3].stabilising  rotated_surface_code_shor[5-1].detecting  rotated_surface_code_shor[5-1].stabilising  rotated_surface_code_shor[5-3].detecting  rotated_surface_code_shor[5-3].stabilising  rotated_surface_code_shor[5].detecting  rotated_surface_code_shor[5].stabilising  test_compute.py  zweb_webs.detecting  zweb_webs.stabilising
(+50 files in other folders)
