[project]
name = "fault-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "frozendict>=2.4.6",
    "galois>=0.4.6",
    "pyzx>=0.9.0",
    "recordclass>=0.23.1",
    "rustworkx>=0.17.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]
