[project]
name = "fault-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "frozendict>=2.4.6",
    "galois>=0.4.7",
    "notebook>=7.4.7",
    "pyzx>=0.9.0",
    "recordclass>=0.23.1",
    "rustworkx>=0.17.1",
    "sinter==1.16.dev1761611832",
    "stim==1.16.dev1761611832",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff==0.14.7", # Pinned to ensure everyone uses the same rules
]
