[project]
name = "paritea"
version = "0.1.0"
description = "A collection of tools for the FTQC researcher."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "frozendict>=2.4.6",
    "galois>=0.4.7",
    "notebook>=7.4.7",
    "pyzx>=0.9.0",
    "recordclass>=0.23.1",
    "rustworkx>=0.17.1",
    "sinter==1.16.dev1761611832",
    "stim==1.16.dev1761611832",
    "tqdm>=4.67.1",
]

[dependency-groups]
all = [
    { include-group = "bench" },
    { include-group = "dev" },
    { include-group = "test" },
]

bench = [
    "pyinstrument>=5.1.1",
]

dev = [
    "ruff==0.14.9", # Pinned to ensure everyone uses the same rules
]

test = [
    "pytest>=8.4.2",
]
